--- a/WinRTCrypt/src/Controls/SymetericEncryptionUserControl.xaml
+++ b/WinRTCrypt/src/Controls/SymetericEncryptionUserControl.xaml
@@ -23,8 +23,8 @@
         <TextBox Grid.Row="0" Grid.Column="1" Width="200" Margin="10" FontSize="20" x:Name="TxtPlain"></TextBox>
         <TextBlock Text="Cipher Text" FontSize="15" Margin="15" Grid.Row="1" Grid.Column="0" />
         <TextBox Grid.Row="1" Grid.Column="1" Width="200" Margin="10" x:Name="TxtCipher" FontSize="20" IsReadOnly="True" />
-        <Button Content="Encrypt" Grid.Row="2" Grid.Column="0" Margin="10" Tapped="Button_Tapped" />
-        <Button Content="Decrypt" Grid.Row="2" Grid.Column="1" Margin="10" Tapped="ButtonTapped1" />
+        <Button Content="Encrypt" Grid.Row="2" Grid.Column="0" Margin="10" Tapped="Encrypt" />
+        <Button Content="Decrypt" Grid.Row="2" Grid.Column="1" Margin="10" Tapped="Decrypt" />
     </Grid>
 
 </UserControl>
